--- a/about.html
+++ b/about.html
@@ -25,10 +25,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link " aria-current="page" href="/">Home</a>
+                        <a class="nav-link " aria-current="page" href="iCoderBootstrap/">Home</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="/about.html">About</a>
+                        <a class="nav-link" href="/iCoderBootstrap/about.html">About</a>
                     </li>
 
                     <li class="nav-item dropdown">
@@ -42,12 +42,12 @@
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="#">Support</a></li>
+                            <li><a class="dropdown-item" href="#">Support Us</a></li>
                             <li><a class="dropdown-item" href="#">Write For Us</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/contact.html">Contact Us</a>
+                        <a class="nav-link" href="/iCoderBootstrap/contact.html">Contact Us</a>
                     </li>
                 </ul>
                 <form class="d-flex">
